RESOLVED SPAGOBI-2095: As a technical user, when defining a hierarchic LOV, I want to specify the description column for each level of the tree https://www.spagoworld.org/jira/browse/SPAGOBI-2095
git-svn-id: svn://svn.forge.objectweb.org/svnroot/spagobi/V_5.x/Server/branches/SpagoBI-5.1@24784 99afaf0d-6903-0410-885a-c66a8bbb5f81